cloud container overflow-x hidden, element fixed, deleted horizontal scroll

--- a/websites/website_project/css/scss/_cloud_container.scss
+++ b/websites/website_project/css/scss/_cloud_container.scss
@@ -1,4 +1,5 @@
 .cloud_container{
+	overflow-x: hidden; 
 	img{
 		z-index: -1;
 	}
