--- a/websites/website_project/css/scss/_fonts.scss
+++ b/websites/website_project/css/scss/_fonts.scss
@@ -69,6 +69,10 @@ h2{
 	margin-bottom: 27px;
 }
 
+.text-smaller{
+	font-size:smaller;
+}
+
 .quote p{
 	font-family: quote_font;
 	font-size: 2em;	
