--- a/websites/website_project/css/scss/_layout.scss
+++ b/websites/website_project/css/scss/_layout.scss
@@ -37,8 +37,13 @@
 		}
 }
 
+.shorter{
+	width: 70%;
+	margin: 0 auto;
+}
+
 .border{
-	 border-radius: 10px;
+	border-radius: 10px;
 	padding: 5px;
 	margin: 0 auto;
 	border: solid 3px black;
