--- a/websites/website_project/css/scss/_media_queries_layout.scss
+++ b/websites/website_project/css/scss/_media_queries_layout.scss
@@ -8,7 +8,7 @@
         }
         #main_info{
         background-color: white;
-        padding: 20px 0px;
+        //padding: 20px 0px;
         min-height: 100vh;
         }
         
@@ -21,7 +21,7 @@
         }
         #main_info{
         background-color: white;
-        padding: 20px 0px;
+        //padding: 20px 0px;
         min-height: 100vh;
         }
         
@@ -34,7 +34,7 @@
         }
         #main_info{
         background-color: white;
-        padding: 20px 0px;
+        //padding: 20px 0px;
         }
 
     }
@@ -45,7 +45,7 @@
         margin-top: 50px;
         }
         #main_info{
-        background-color: transparent;
+        background-color: white;
         }
 
     }
@@ -56,7 +56,7 @@
         margin-top: 50px;
         }
          #main_info{
-        background-color: transparent;
+        background-color: white;
         }
 
     }
@@ -67,7 +67,7 @@
         margin-top: 50px;
         }
          #main_info{
-        background-color: transparent;
+        background-color: white;
         }
 
     }
